# parody-web

./: .gitignore  README.md  pyproject.toml  requirements.txt  runtests.py
.github/workflows/: ci.yml  deploy-reusable.yml  deploy.yml
book/: tests.py  urls.py  views.py
book/management/commands/: import_artifact.py
book/migrations/: 0001_initial.py
book/templates/book/: base.html  index.html  section.html
book/templates/registration/: login.html
book/templatetags/: book_tags.py
booksite/: settings.py  urls.py
deploy/: AWS.md  sites.example.json
example_site/.github/workflows/: deploy.yml
example_site/booksite/: settings.py
example_site/deploy/: deploy.sh
parody_web/: apps.py  models.py  numbering.py  tests.py  urls.py  views.py
parody_web/management/commands/: import_artifact.py  publish_edition.py  unpublish_edition.py
parody_web/migrations/: 0001_initial.py  0002_section_preview.py  0003_numbers.py  0004_book_cover_errata.py  0005_book_editions.py  0006_book_parts.py  0007_book_draft.py  0008_section_plain.py
parody_web/templates/parody_web/: base.html  book_index.html  chapter.html  errata.html  index.html  search.html  section.html  systems.html
parody_web/templates/registration/: login.html
parody_web/templatetags/: parody_web.py
tests/: settings.py  urls.py
